add examples to man page

--- a/fsstat.1
+++ b/fsstat.1
@@ -79,7 +79,14 @@ unfollow symlinks.
 
 .SH EXIT CODES
 
+.PP
 It returns 0 on success, and 1 on failure.
+
+.SH EXAMPLES
+
+.nf
+$ fsstat -p file0.txt file1.txt -t entry0 entry1
+.fi
 
 .SH HELP
 
