--- a/fsstat.1
+++ b/fsstat.1
@@ -1,9 +1,9 @@
-.TH fsstat 1 ${VERSION} ${PKG}
+.TH fsstat 1 ${VERSION}
 
 .SH NAME
 
 .PP
-fsstat - it stats file system entries.
+fsstat - it stats file system entries
 
 .SH SYNOPSIS
 
@@ -13,12 +13,14 @@ fsstat [\fIOPTION\fR | \fIPATH\fR]...
 .SH DESCRIPTION
 
 .PP
-It stats file system entries given their paths and options placed before them.
+It stats different types of info about file system entries given their
+\fIPATH\fR(s) and \fIOPTION\fR(s) used before them.
 
 .SH INFO TYPE OPTIONS
 
 .PP
-These options specify the info type to be stat. One must always be specified:
+These options specify the info type to be stat. At least one must always be
+specified:
 
 .TP
 .B -t
@@ -66,49 +68,55 @@ it stats its last modified date.
 .SH SYMLINK OPTIONS
 
 .PP
-These options specify how symlinks will be handled. By default, it does not
-follows them:
+These options specify how symlinks are handled. By default, it does not follows
+them:
 
 .TP
 .B -fl
-follow symlinks.
+it follows symlinks.
 
 .TP
 .B -ul
-unfollow symlinks.
+it unfollows symlinks.
+
+.SH EXAMPLES
+
+.nf
+$ fsstat -p entry0 entry1 -hs entry2;
+$ fsstat -t symlink0 -ul symlink1;
+.fi
 
 .SH EXIT CODES
 
 .PP
 It returns 0 on success, and 1 on failure.
 
-.SH EXAMPLES
+.SH SOURCE CODE
 
-.nf
-$ fsstat -p file0.txt file1.txt -t entry0 entry1
-.fi
+.PP
+Its source code is available at <https://github.com/skippyr/fsstat>.
 
 .SH HELP
 
 .PP
-You can ask for help related to this project through its issues page
-(<https://github.com/skippyr/fsstat/issues>).
+If you need help about this project, open a new issue in its issues page
+(<https://github.com/skippyr/fsstat/issues>) or send me an e-mail
+(<mailto:skippyr.developer@gmail.com>) describing what is going on.
 
 .SH CONTRIBUTING
 
 .PP
-This project is open to receive contributions.  You can send code contributions
-to be reviewed through its pull requests page (<https://github.com/skippyr/fsstat/pulls>).
+This project is open to review and possibly accept contributions, specially
+fixes and suggestions. If you are interested, send your contribution to its
+pull requests page (<https://github.com/skippyr/fsstat/pulls>) or to my
+e-mail (<mailto:skippyr.developer@gmail.com>).
 
 .PP
-By contributing to this project, you agree to use the same copyright used by it.
+By contributing to this project, you must agree to license your work under the
+same license that the project uses.
 
-.SH COPYRIGHT
-
-.PP
-BSD-3-Clause License
-.br
-Copyright (c) 2024, Sherman Rofeman <skippyr.developer@gmail.com>
+.SH LICENSE
 
 .PP
-See the LICENSE file that comes in its source code for more details.
+This project is licensed under the BSD-3-Clause License. Refer to the LICENSE
+file that comes in its source code for license and copyright details.
